--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -31,7 +31,7 @@
     <%= f.text_field :input_real_data %>
   </div>
 
-  <div class="actions">
+  <div class="btn btn-lg">
     <%= f.submit %>
   </div>
 <% end %>
