--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(burnup, url: { action: "create"}) do |f| %>
+<%= form_for(burnup, url: { action: "create"}, :html => {:class => "form-horizontal center"}) do |f| %>
   <% if burnup.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(burnup.errors.count, "error") %> prohibited this burnup from being saved:</h2>
@@ -11,27 +11,25 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label "Total Cards:" %>
+  <div class="control-group">
+    <%= f.label "Total Cards:", class: 'control-label' %>
     <%= f.text_field :total_cards %>
   </div>
 
-  <div class="field">
-    <%= f.label "Time Box:" %>
+  <div class="control-group">
+    <%= f.label "Time Box:", class: 'control-label' %>
     <%= f.text_field :timebox_cicles %>
   </div>
 
-  <div class="field">
+  <div class="control-group">
     <%= f.label "Throughput projection (cards/week):" %>
     <%= f.text_field :throughput_projection %>
   </div>
 
-  <div class="field">
+  <div class="control-group">
     <%= f.label "Real World series data (format: 1 4 5 3 2):" %>
     <%= f.text_field :input_real_data %>
   </div>
 
-  <div class="btn btn-lg">
-    <%= f.submit %>
-  </div>
+  <%= f.submit 'Draw', class: "btn btn-default btn-primary" %>
 <% end %>
