--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(burnup, url: { action: "create"}, :html => {:class => "form-horizontal center"}) do |f| %>
+<%= form_for(burnup, html: {:class => "form-horizontal center"}) do |f| %>
   <% if burnup.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(burnup.errors.count, "error") %> prohibited this burnup from being saved:</h2>
@@ -11,25 +11,37 @@
     </div>
   <% end %>
 
-  <div class="control-group">
-    <%= f.label "Total Cards:", class: 'control-label' %>
-    <%= f.text_field :total_cards %>
+  <div class="form-group row">
+    <div class="col-xs-2">
+      <%= f.label "Total Cards:", class: 'col-form-label' %>
+    </div>
+    <div class="col-xs-2">
+      <%= f.text_field :total_cards, class: 'form-control', placeholder: 'Total Cards' %>
+    </div>
+    <div class="col-xs-2">
+      <%= f.label "Time Box:", class: 'col-form-label' %>
+    </div>
+    <div class="col-xs-2">
+      <%= f.text_field :timebox_cicles, class: 'form-control', placeholder: 'Time Box (weeks)' %>
+    </div>
+    <div class="col-xs-2">
+      <%= f.label "Throughput Projection:", class: 'col-form-label' %>
+    </div>
+    <div class="col-xs-2">
+      <%= f.text_field :throughput_projection, class: 'form-control', placeholder: 'Throughput Projection' %>
+    </div>
   </div>
 
-  <div class="control-group">
-    <%= f.label "Time Box:", class: 'control-label' %>
-    <%= f.text_field :timebox_cicles %>
+  <div class="form-group row">
+    <div class="col-xs-4">
+      <%= f.label "Real World series data (format: 1 4 5 3 2):", class: 'col-form-label' %>
+    </div>
+    <div class="col-xs-8">
+      <%= f.text_field :input_real_data, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="control-group">
-    <%= f.label "Throughput projection (cards/week):" %>
-    <%= f.text_field :throughput_projection %>
+  <div class="form-group">
+    <%= f.submit 'Draw', class: "btn btn-lg btn-success" %>
   </div>
-
-  <div class="control-group">
-    <%= f.label "Real World series data (format: 1 4 5 3 2):" %>
-    <%= f.text_field :input_real_data %>
-  </div>
-
-  <%= f.submit 'Draw', class: "btn btn-default btn-primary" %>
 <% end %>
