--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -33,13 +33,13 @@
   </div>
 
   <div class="form-group">
-    <%= f.label "Selecione o algoritmo para a previsão da entrega com base nos dados reais:", class: 'lable' %>
+    <%= f.label "Selecione um algoritmo para cálculo da previsão da entrega com base nos dados reais de vazão do time:", class: 'lable' %>
     <%= f.select :algorithm, %w[none repetition random], class: 'form-control' %>
   </div>
 
   <div class="form-group row">
     <div class="col-xs-4">
-      <%= f.label "Dados reais da vazão do time a cada semana (exemplo: 0 0 2 5 6, onde cada número representa a vazão de cards a cada semana):", class: 'col-form-label' %>
+      <%= f.label "Dados reais da vazão do time a cada semana (exemplo: 0 0 2 5 6, onde cada número representa a vazão de cards nas 5 primeiras semanas do projeto):", class: 'col-form-label' %>
     </div>
     <div class="col-xs-8">
       <%= f.text_field :input_real_data, class: 'form-control' %>
@@ -47,6 +47,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit 'Draw', class: "btn btn-lg btn-success" %>
+    <%= f.submit 'Projetar', class: "btn btn-lg btn-success" %>
   </div>
 <% end %>
