--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,9 @@
+<div class='header'>
+  <p></p>
+</div>
+
 <div class="page-header">
-  <!-- 
+  <!--
   <nav>
     <ul class="nav nav-pills pull-right">
       <li role="presentation" class="active"><a href="#">Home</a></li>
@@ -8,5 +12,5 @@
     </ul>
   </nav>
   -->
-  <h3 class="text-muted">Timeboxer</h3>
+  <h1 class="text-muted">Timeboxer</h1>
 </div>
