Add timeboxer logo

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron">
   <!-- h1>Timeboxer</h1 -->
   <p class="lead">Preencha todas as informações disponíveis sobre o projeto e observe o gráfico gerado abaixo</p>
+  <img src="./assets/boxer.jpg" style="width:500px;height:600px;">
   <%= render 'form', burnup: @burnup %>
 </div>
 
