--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,14 +3,8 @@
 </div>
 
 <div class="page-header">
-  <!--
-  <nav>
-    <ul class="nav nav-pills pull-right">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
-      <li role="presentation"><a href="#">About</a></li>
-      <li role="presentation"><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  -->
-  <h1 class="text-muted">Timeboxer</h1>
+  <h1 class="text-muted">
+    <img src="boxer.jpg" style="width:110px;height:110px;">
+    Timeboxer
+  </h1>
 </div>
